[package]
name = "neos-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
hyper = { version = "0.14.0", features = ["full"] }
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
